--- a/prj1.html
+++ b/prj1.html
@@ -34,6 +34,7 @@
         <input type="reset" value="Borrar Todo">
 
         <input type="submit" value="Ver Todas Las Tareas" placeholder="tareas.php">
+        <input type="submit" value="Reporte" placeholder="reporte.php">
 
     </form>
 
